--- a/app/bundles/CoreBundle/Assets/css/app/less/components/alerts.less
+++ b/app/bundles/CoreBundle/Assets/css/app/less/components/alerts.less
@@ -29,15 +29,27 @@
 .alert-growl {
 	background: rgba(0,0,0,.8);
 	color: #FFFFFF;
-	position: absolute;
-	top: 20px;
-	right: 20px;
-	z-index: 100000;
 	border: 1px solid #000;
+}
+
+.alert-growl-container {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  z-index: 100000;
+
+  .alert-growl {
+	margin-bottom: 5px;
+  }
 }
 
 .alert-growl .close {
   font-size: (@font-size-base);
   color: #fff;
+  margin-left: 10px;
+}
+
+.alert .close {
+  font-size: (@font-size-base);
   margin-left: 10px;
 }
